--- a/styles/style.css
+++ b/styles/style.css
@@ -26,15 +26,18 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
     overflow: hidden;
+
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 530px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
+    
     transition: width .3s, height .3s;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem {
@@ -54,4 +57,72 @@ div#formulario > h1 {
 }
 div#formulario > p {
     font-size: 0.8em;
+}
+form > div.campo {
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    display: block;
+    height: 40%;
+    width: 100%;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+div.campo > label {
+    display: none;
+}
+div.campo > span {
+    color: white;
+
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+div.campo > input {
+    background-color: #9fe7e5;
+    font-size: 1em;
+    width: calc(100% - 49px);
+    height: 4vh;
+    
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-5px);
+}
+div.campo > input:focus-within {
+    background-color: white;
+    outline: none;
+}
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+form > input[type=submit]:hover {
+    background-color: #2b6361;
+}
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: #ffffff;
+    color: #2b6361;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    text-decoration: none;
+}
+form > a.botao:hover {
+    background-color: #58c7c3;
+}
+form > a.botao > i {
+font-size: 0.8em; 
 }
